--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/ts.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- Moment.js Reference -->    
-    <script src="https://cdn.jsdelivr.net/momentjs/2.18.1/moment.min.js"></script>
 
 </head>
 
@@ -21,7 +19,6 @@
         <div class="jumbotron">
             <h1 class="text-center">Train Schedule</h1>
             <h3 class="text-center">Choo Choo</h3>
-
         </div>
 
         <p class="subTitle">Current Train Schedule</p>
@@ -74,6 +71,8 @@
         </div>
     </div>
 
+    <!-- Added Moment JS -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <!-- JavaScript -->
     <script src="assets/javascript/ts.js"></script>
 
