minutes away = undefined

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Time-sheet</title>
+    <title>Train Schedule</title>
     <!-- Firebase Reference -->
     <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
     <!--jQuery  -->
@@ -10,6 +10,8 @@
     <!--Bootstrap CDN  -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/ts.css">
+    <script src="https://use.fontawesome.com/2e73c185f6.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
@@ -18,7 +20,7 @@
     <div class="container-fluid">
         <div class="jumbotron">
             <h1 class="text-center">Train Schedule</h1>
-            <h3 class="text-center">Choo Choo</h3>
+            <h3 class="text-center"><i class="fa fa-train fa-3x" aria-hidden="true"></i></h3>
         </div>
 
         <p class="subTitle">Current Train Schedule</p>
