--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <p class="subTitle">Current Train Schedule</p>
 
-        <!-- Container for EMPLOYEE INFO -->
+        <!-- Container for Train Schedule -->
         <div class="container">
             <table class="table table-striped table-hover">
                 <thead>
@@ -44,7 +44,7 @@
 
         <p class="subTitle">Add Train</p>
 
-        <!-- Container for FORM -->
+        <!-- Container for form -->
         <div class="container">
             <div class="form-group">
                 <label class="control-label" for="focusedInput">Train Name</label>
